# seven_rains

./: .gitignore  COMMAND_LINE_FEATURES.md  README_DEPLOYMENT.md  SCHEDULING_RULES.md  build_exe.py  china_holidays_2025.json  comprehensive_rule_check.py  debug_october.py  debug_specific.py  detailed_rule3_check.py  plan.json  pyproject.toml  run.bat  run.sh  run_scheduler.bat  sample.xls  seven_rain_cli.py
doc/: CLAUDE.md  README_DEPLOYMENT.md  SCHEDULING_RULES.md  WINDOWS_EXECUTABLE_SUMMARY.md
src/sevens_rain/: __init__.py  excel_generator.py  main.py  models.py  rules.py  scheduler.py  storage.py
tests/: test_main.py
