[project]
name = "seven-rains"
version = "0.1.0"
description = "Excel generation tool with custom logic"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]
build = [
    "pyinstaller>=6.0.0"
]

[project.scripts]
seven-rains = "seven_rains.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
